k8s/manifests/traefik-middleware-strip-result.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: strip-result
  namespace: voting-app
spec:
  stripPrefix:
    prefixes:
      - /result
