k8s/manifests/worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker
  namespace: voting-app
  labels:
    app: worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: worker
  template:
    metadata:
      labels:
        app: worker
    spec:
      containers:
      - name: worker
        image: hiiamgay/worker:latest
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            cpu: "150m"
            memory: "192Mi"
          requests:
            cpu: "100m"
            memory: "128Mi"

---
apiVersion: v1
kind: Service
metadata:
  name: worker
  namespace: voting-app
  labels:
    app: worker
spec:
  selector:
    app: worker
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
